Create method `RecommendPlaylists` for home page compilation
